--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
     "singleQuote": true,
     "arrowParens": "avoid",
-    "printWidth": 120
+    "printWidth": 120,
+    "proseWrap": "always"
 }
