--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-fa": "^5.0.0",
     "react-ga": "^3.3.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "react-spring-pop": "^1.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
