--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "countapi-js": "^1.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-fa": "^5.0.0",
     "react-ga": "^3.3.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
