--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "react-spring-pop": "^1.3.2",
+    "rgt": "^1.0.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
